# shape

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
crates/shape-abi-v1/: Cargo.toml
crates/shape-abi-v1/src/: binary_builder.rs  binary_format.rs  lib.rs
crates/shape-ast/: Cargo.toml
crates/shape-ast/src/: int_width.rs  interpolation.rs  lib.rs  module_utils.rs  shape.pest
crates/shape-common/: Cargo.toml
crates/shape-core/: Cargo.toml  README.md  ai_config.toml  build.rs  test_complex_strategy.shape  test_rolling.shape  test_rolling_final.shape  test_simple.shape  test_strategy_with_real_data.shape
crates/shape-core/benches/: execution_modes_bench.rs  parser_bench.rs  pattern_matching_bench.rs  real_strategy_bench.rs  vm_execution_bench.rs
crates/shape-core/examples/: advanced_analyze.shape  ai_discovery.shape  ai_simple_generation.shape  ai_strategy_batch.json  analyze_queries.shape  atr_spike_console_output.txt  bench_1year.shape  bench_backtest.shape  bench_complex_strategy.shape  bench_medium_strategy.shape  bench_quick_test.shape  bench_simple_strategy.shape  bench_vector_indicators.shape  caching_example.shape  complete_flexible_example.shape  comprehensive_multiframe_strategy.shape  current_capabilities_test.shape  es_data_script.shape  flexible_atr_reversal.shape  indicator_caching_example.shape  indicators_with_warmup.shape  multi_instrument_example.shape  multi_symbol_analysis.shape  multiframe_backtest_test.shape  repl_es_data_example.shape  series_operators_demo.shape  signal_backtest_demo.shape  simple_atr_reversal.shape  simple_signal_test.shape  stdlib.shape  streaming_example.shape  test_backtest_basic.shape  test_backtest_complete.shape  test_backtest_debug.shape  test_backtest_final.shape  test_backtest_minimal.shape  test_backtest_proper.shape  test_backtest_v2.shape  test_backtest_verify.shape  test_bollinger_bands_intrinsics.shape  (+28 more)
crates/shape-core/proto/: shape.proto
crates/shape-core/src/: book_examples_test.rs  lib.rs
crates/shape-core/test/: market-data-example.shape  simple-test.shape  spec-verification-1-5.shape
crates/shape-diagnostics/: Cargo.toml
crates/shape-diagnostics/src/: lib.rs  render.rs
crates/shape-diagnostics/tests/: lsds_round_trip.rs
crates/shape-gc/: Cargo.toml
crates/shape-gc/src/: allocator.rs  barrier.rs  fixup.rs  generations.rs  header.rs  lib.rs  marker.rs  platform.rs  ptr.rs  region.rs  relocator.rs  roots.rs  safepoint.rs  scheduler.rs  trap_handler.rs
crates/shape-jit/: ABI.md  Cargo.toml
crates/shape-jit/src/: REFACTOR_PLAN.md  context.rs  core.rs  crash_handler.rs  error.rs  executor.rs  ffi_refs.rs  foreign_bridge.rs  jit_array.rs  jit_cache.rs  jit_matrix.rs  lib.rs  loop_analysis.rs  mixed_table.rs  nan_boxing.rs  numeric_compiler.rs  osr_compiler.rs  v2_regression_tests.rs  worker.rs
crates/shape-jit/tests/: bounds_elision.rs  differential_fuzz.rs
crates/shape-macros/: Cargo.toml
crates/shape-macros/src/: lib.rs
crates/shape-runtime/: Cargo.toml  build.rs
crates/shape-runtime/benches/: simulation_bench.rs
crates/shape-runtime/src/: annotation_context.rs  arrow_c.rs  ast_extensions.rs  binary_reader.rs  blob_prefetch.rs  blob_store.rs  blob_wire_format.rs  builtin_metadata.rs  chart_detect.rs  closure.rs  code_search.rs  columnar_aggregations.rs  const_eval.rs  content_builders.rs  content_dispatch.rs  content_methods.rs  content_renderer.rs  dependency_resolver.rs  distributed_gc.rs  doc_extract.rs  event_queue.rs  execution_proof.rs  extension_context.rs  extensions.rs  extensions_config.rs  frontmatter.rs  fuzzy.rs  fuzzy_property.rs  hashing.rs  join_executor.rs  json_value.rs  leakage.rs  lib.rs  lookahead_guard.rs  marshal.rs  module_bindings.rs  module_exports.rs  module_exports_tests.rs  module_manifest.rs  multiple_testing.rs  (+34 more)
crates/shape-value/: Cargo.toml
crates/shape-value/src/: aligned_vec.rs  array_view.rs  closure.rs  content.rs  context.rs  datatable.rs  enums.rs  external_value.rs  extraction.rs  heap_header.rs  heap_value.rs  heap_variants.rs  ids.rs  iterator_state.rs  kinded_slot.rs  lib.rs  method_id.rs  native_kind.rs  reference.rs  scalar.rs  shape_array.rs  shape_graph.rs  shape_graph_current.rs  slot.rs  string_intern.rs  tag_bits.rs  tags.rs  typed_buffer.rs  unified_array.rs  unified_matrix.rs  unified_string.rs  unified_wrapper.rs  v2_struct_layout.rs  v2_typed_array.rs  value.rs  value_bits.rs  value_word.rs  value_word_drop.rs  value_word_ext.rs  vm_closure_handle.rs
crates/shape-viz/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shape-viz/data/: ES.1m.mktd
crates/shape-viz/shape-viz-core/: Cargo.toml
crates/shape-viz/shape-viz-native/: Cargo.toml
crates/shape-vm/: COVERAGE_PLAN.md  Cargo.toml  build.rs
crates/shape-vm/benches/: typed_access_bench.rs  vm_benchmarks.rs
crates/shape-vm/embedded/: core_stdlib.msgpack
crates/shape-vm/src/: README.md  V2_NANBOX_AUDIT.md  V2_STAGE6_GATE.md  V2_VALUEWORD_MIGRATION.md  blob_cache_v2.rs  borrow_checker.rs  bundle_compiler.rs  bytecode.rs  bytecode_cache.rs  configuration.rs  constants.rs  debugger.rs  deopt.rs  execution.rs  feature_matrix.rs  feedback.rs  hot_reload.rs  jit_ffi_integration.rs  lib.rs  lib_tests.rs  linker.rs  linker_tests.rs  megamorphic_cache.rs  memory.rs  metrics.rs  module_graph.rs  module_resolution.rs  remote.rs  resource_limits.rs  stdlib.rs  test_utils.rs  tier.rs  type_tracking.rs
crates/shape-wire/: Cargo.toml
crates/shape-wire/src/: any_error.rs  codec.rs  envelope.rs  error.rs  formatter.rs  lib.rs  metadata.rs  print_result.rs  render.rs  value.rs
extensions/python/: Cargo.toml
extensions/python/src/: arrow_bridge.rs  error_mapping.rs  lib.rs  marshaling.rs  runtime.rs
extensions/typescript/: Cargo.toml
extensions/typescript/src/: error_mapping.rs  lib.rs  marshaling.rs  runtime.rs
tools/shape-lsp/: Cargo.toml  README.md  vscode-example.json
tools/shape-lsp/src/: analysis.rs  annotation_discovery.rs  call_hierarchy.rs  code_actions.rs  code_lens.rs  context.rs  definition.rs  (+27 more)
tools/shape-test/: Cargo.toml  README.md
(+1685 files in other folders)
