[package]
name = "shape-abi-v1"
version = "0.1.3"
edition = "2024"
description = "Stable host ABI v1 for Shape capability modules"
license = "MIT"
repository = "https://github.com/shape-lang/shape"
authors = ["Daniel Amesberger"]

[dependencies]
# Minimal dependencies for C ABI types
# Plugins can optionally use serde for convenience

[features]
default = []
# Enable serde for MessagePack (de)serialization helpers
serde = ["dep:serde", "dep:rmp-serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.rmp-serde]
version = "1.3"
optional = true

[lib]
crate-type = ["rlib", "staticlib"]
