[package]
name = "shape-lang-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level pipeline (parse, analyze, compile, execute) for Shape"
publish = false
autobenches = false

[dependencies]
shape-ast = { version = "0.1.1", path = "../shape-ast" }
shape-runtime = { version = "0.1.1", path = "../shape-runtime" }
shape-wire = { version = "0.1.1", path = "../shape-wire" }
shape-vm = { version = "0.1.1", path = "../shape-vm" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.24"
walkdir = "2.5"
