[package]
name = "shape-diagnostics"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LLM-Structured Diagnostic Schema (LSDS) for the Shape compiler — primary diagnostic format per ADR-006 §9."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
