[package]
name = "shape-gc"
version = "0.1.2"
edition = "2024"
description = "Garbage collection infrastructure for the Shape runtime"
license = "MIT OR Apache-2.0"
authors = ["Daniel Amesberger"]
repository = "https://github.com/shape-lang/shape"

[dependencies]
libc = "0.2"

[features]
default = []
hardware-masking = []
gc-stress = []
