[package]
name = "shape-jit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tiered JIT compiler (Cranelift) for the Shape virtual machine"

[dependencies]
shape-ast = { workspace = true }
shape-runtime = { workspace = true }
shape-value = { workspace = true }
shape-vm = { workspace = true }
shape-wire = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.3"
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
libloading = "0.8"
wide = "0.7"

# Cranelift is required for JIT
cranelift = "0.110"
cranelift-jit = "0.110"
cranelift-module = "0.110"
cranelift-native = "0.110"
target-lexicon = "0.12"
shape-gc = { workspace = true, optional = true }

[features]
default = []
gc = ["shape-gc"]

# Register the `jit_v2_unstable_tests` cfg so `rustc` does not warn on the
# `#[cfg(jit_v2_unstable_tests)]` gates scattered through the crate. The
# gate is enabled at build time via
#   RUSTFLAGS='--cfg jit_v2_unstable_tests' cargo test -p shape-jit --lib
# It guards integration_tests / v2_array_tests / a1d2_tests / a1e_tests
# modules that exercise JIT end-to-end paths with pre-existing
# heap-corruption regressions on jit-v2-phase1.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(jit_v2_unstable_tests)'] }
