[package]
name = "shape-jit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tiered JIT compiler (Cranelift) for the Shape virtual machine"

[dependencies]
shape-ast = { workspace = true }
shape-runtime = { workspace = true }
shape-value = { workspace = true }
shape-vm = { workspace = true }
shape-wire = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.3"
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
libloading = "0.8"
wide = "0.7"

# Cranelift is required for JIT
cranelift = "0.110"
cranelift-jit = "0.110"
cranelift-module = "0.110"
cranelift-native = "0.110"
target-lexicon = "0.12"
shape-gc = { workspace = true, optional = true }

[features]
default = []
gc = ["shape-gc"]
# Gate heavy JIT execution-path tests (integration_tests, a1d2_tests, a1e_tests,
# v2_array_tests) behind this feature. Each heavy test invokes
# JITExecutor::execute_program which JIT-compiles ~118 stdlib functions via
# MirToIR — collectively too slow to run on the default Tier 1 path and, at
# the default test-threads=n-cpus concurrency level, racy enough to SIGILL
# before the summary line. Run these via `just test-deep` (which already
# enables deep-tests on shape-vm/shape-runtime/shape-ast).
deep-tests = []
