[package]
name = "shape-macros"
version = "0.1.2"
edition = "2024"
description = "Procedural macros for Shape builtin function introspection"
license = "MIT"
repository = "https://github.com/shape-lang/shape"
authors = ["Daniel Amesberger"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
