[package]
name = "shape-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bytecode compiler, builtins, and runtime infrastructure for Shape"
build = "build.rs"

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
ordered-float = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { workspace = true }

# Concurrency & Async
tokio = { workspace = true, features = ["rt", "sync", "rt-multi-thread", "time"] }
futures = "0.3"
rayon = { workspace = true }
crossbeam-queue = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
lazy_static = "1.4"

# Performance
wide = "0.7"
rustfft = "6.2"

# Serialization & Plugins
rmp-serde = "1.3"
rmp = "0.8"
toml = "0.8"
serde_yaml = "0.9"
quick-xml = { version = "0.37", features = ["serialize"] }

# Utilities
dirs = "5.0"
rand = "0.8"
rand_chacha = "0.3"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
hex = "0.4"
regex = "1"
unicode-segmentation = "1.11"
unicode-normalization = "0.1"
tracing = "0.1"
libloading = "0.8"
semver = "1.0"
shape-abi-v1 = { workspace = true, features = ["serde"] }
pest = "2.8"
pest_derive = "2.8"
lru = "0.12"
bincode = "1.3"
zstd = "0.13"
flate2 = "1.0"
zip = "2.0"
tar = "0.4"
arrow-ipc = { workspace = true }
csv = "1.2"
tempfile = "3.8"
comfy-table = "7.1"
walkdir = "2.4"

# Arrow
arrow-schema = { workspace = true, features = ["ffi"] }
arrow-array = { workspace = true, features = ["ffi"] }
arrow-csv = { workspace = true }
arrow-json = { workspace = true }
arrow-select = { workspace = true }
parquet = { workspace = true }
reqwest = { workspace = true }

# Internal
shape-ast = { version = "0.1.1", path = "../shape-ast" }
shape-value = { version = "0.1.1", path = "../shape-value" }
shape-macros = { workspace = true }
shape-wire = { version = "0.1.1", path = "../shape-wire" }

[features]
default = ["simd"]
deep-tests = []
simd = []
jit = []
tokio-runtime = []
parallel = []

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "simulation_bench"
harness = false
