[package]
name = "shape-vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Stack-based bytecode virtual machine for the Shape programming language"

[dependencies]
shape-ast = { workspace = true }
shape-value = { workspace = true }
shape-runtime = { workspace = true }
shape-wire = { workspace = true }
shape-abi-v1 = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
ordered-float = { workspace = true }
rust_decimal = { workspace = true }
logos = "0.13"
lazy_static = "1.4"
dashmap = "5.5"
parking_lot = "0.12"
rayon = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
phf = { version = "0.11", features = ["macros"] }
wide = "0.7"
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-ord = { workspace = true }
arrow-select = { workspace = true }
sha2 = "0.10"
datafrog = "2.0"
shape-gc = { workspace = true, optional = true }
rmp-serde = "1.3"
hex = "0.4"
rmpv = { version = "1", features = ["with-serde"] }
dirs = "5.0"
libloading = "0.8"
libffi = "3.2"
unicode-segmentation = "1.11"
unicode-normalization = "0.1"

# JIT dependencies (optional)
cranelift = { version = "0.110", optional = true }
cranelift-jit = { version = "0.110", optional = true }
cranelift-module = { version = "0.110", optional = true }
cranelift-native = { version = "0.110", optional = true }
target-lexicon = { version = "0.12", optional = true }

[features]
default = []
deep-tests = []
jit = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native", "target-lexicon"]
gc = ["shape-gc", "shape-value/gc"]
gc_barrier_debug = [] # Debug-mode write barrier coverage counters
quic = ["shape-wire/quic"]

# Binary dependencies
[dependencies.tokio]
workspace = true

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "typed_access_bench"
harness = false

[[bench]]
name = "vm_benchmarks"
harness = false

[[bin]]
name = "parity_matrix"
path = "src/bin/parity_matrix.rs"
required-features = ["clap"]

[[bin]]
name = "stdlib_gen"
path = "src/bin/stdlib_gen.rs"
