[package]
name = "shape-wire"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal wire format for Shape values - serialization and type metadata"

[features]
default = []
# Enable AST integration for building metadata from FormatDef
ast-integration = ["shape-ast"]
# Enable QUIC transport (requires quinn + rustls)
quic = ["quinn", "rustls", "rcgen", "tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.3"
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
zstd = "0.13"
shape-ast = { version = "0.1.0", path = "../shape-ast", optional = true }

# QUIC transport (optional)
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.13", optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
