[package]
name = "shape-ext-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shape Python language runtime extension"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shape-abi-v1 = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rmp-serde = "1.3"
rmpv = { version = "1", features = ["with-serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["pyo3"]
# Enable actual CPython integration via pyo3
pyo3 = ["dep:pyo3"]

[dependencies.pyo3]
version = "0.28"
features = ["auto-initialize"]
optional = true
