[package]
name = "shape-ext-typescript"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shape TypeScript language runtime extension (V8 via deno_core)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shape-abi-v1 = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rmp-serde = "1.3"
rmpv = { version = "1", features = ["with-serde"] }
deno_core = "0.311"
tokio = { workspace = true }
log = { workspace = true }
