[package]
name = "shape-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
shape-lsp = { version = "0.1.0", path = "../shape-lsp" }
shape-ast = { workspace = true }
shape-vm = { workspace = true }
shape-jit = { version = "0.1.0", path = "../../crates/shape-jit" }
shape-value = { workspace = true }
shape-runtime = { version = "0.1.0", path = "../../crates/shape-runtime" }
shape-wire = { version = "0.1.0", path = "../../crates/shape-wire" }
serde_json = { workspace = true }
tower-lsp-server = "0.23"
walkdir = "2.5"
tempfile = "3.24"

[features]
default = []
e2e-python = []
e2e-typescript = []
e2e-duckdb = []
e2e-postgres = []
