[package]
name = "shape-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
shape-lsp = { workspace = true }
shape-ast = { workspace = true }
shape-vm = { workspace = true }
shape-jit = { workspace = true }
shape-value = { workspace = true }
shape-runtime = { workspace = true }
shape-wire = { workspace = true }
serde_json = { workspace = true }
tower-lsp-server = "0.23"
walkdir = "2.5"
tempfile = "3.24"

[features]
default = []
e2e-python = []
e2e-typescript = []
e2e-duckdb = []
e2e-postgres = []
